# LFI_KT

./: cone.cpp  main.cpp
lab01/: cone.cpp  cone.stl  torus.cpp
lab02/: cone-step-0.vtu  cone-step-1.vtu  cone-step-17.vtu  cone-step-2.vtu  cone-step-21.vtu  cone-step-23.vtu  cone-step-24.vtu  cone-step-26.vtu  cone-step-28.vtu  cone-step-29.vtu  cone-step-30.vtu  cone-step-32.vtu  cone-step-33.vtu  cone-step-34.vtu  cone-step-38.vtu  cone-step-39.vtu  cone-step-40.vtu  cone-step-42.vtu  cone-step-44.vtu  cone-step-45.vtu  cone-step-46.vtu  cone-step-6.vtu  cone-step-9.vtu
lab02/vts/: cone-step-10.vtu  cone-step-11.vtu  cone-step-12.vtu  cone-step-13.vtu  cone-step-14.vtu  cone-step-15.vtu  cone-step-16.vtu  cone-step-18.vtu  cone-step-19.vtu  cone-step-20.vtu  cone-step-22.vtu  cone-step-25.vtu  cone-step-27.vtu  cone-step-3.vtu  cone-step-31.vtu  cone-step-35.vtu  cone-step-36.vtu  cone-step-37.vtu  cone-step-4.vtu  cone-step-41.vtu  cone-step-43.vtu  cone-step-47.vtu  cone-step-48.vtu  cone-step-49.vtu  cone-step-5.vtu  cone-step-7.vtu  cone-step-8.vtu
lab03/: CMakeLists.txt  Poisson.h  Poisson.ufl  poisson_L_shape_refined.pvd  poisson_L_shape_refined000000.vtu
miniproject/: CMakeLists.txt  Grad.h  Grad.ufl  Laplace.h  Laplace.ufl  simulate.cpp
